Chatting Refactoring